[package]
name = "apa102-spi"
version = "0.3.1"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"
categories = [
    "embedded",
    "no-std",
    "hardware-support"]
keywords = ["smart-leds", "apa102"]
description = "SPI-based Driver for apa102 leds"
documentation = "https://docs.rs/crate/apa102-spi"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/smart-leds-rs/apa102-rs"

[dependencies]
smart-leds-trait = "0.2"
embedded-hal = "0.2.1"
